--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,3 +1,13 @@
+# App
+COMPOSE_PROJECT_NAME=YourComposeProjectName
 PORT=YourPortNumber
-MONGO_URI=YourMongoDBConnectionString
+HOST_PORT=YourHostPortNumber
+CONTAINER_PORT=YourContainerPortNumber
 FRONTEND_URL=YourFrontendURL
+
+# Mongo
+MONGO_URI=YourMongoDBConnectionString
+MONGO_INITDB_ROOT_USERNAME=YourMongoInitDBRootUsername
+MONGO_INITDB_ROOT_PASSWORD=YourMongoInitDBRootPassword
+MONGO_INITDB_DATABASE=YourMongoInitDBDatabase
+MONGO_PORT=YourMongoPort
