--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -19,6 +19,10 @@
     "skipLibCheck": true,
 
     "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true
+    "exactOptionalPropertyTypes": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true
   }
 }
