refactor: standardize naming convention

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Exception: Track logger config files
+!back-end/src/configs/logs/
+!back-end/src/configs/logs/*.ts
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
@@ -159,11 +163,6 @@ sketch
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-!.vscode/*.code-snippets
 
 # Local History for Visual Studio Code
 .history/
