--- a/back-end/docker-compose.yml
+++ b/back-end/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - mongo_data:/data/db
     ports:
-      - '${MONGO_PORT}:${MONGO_PORT}'
+      - '${MONGO_PORT}:27017'
     networks:
       - coffee-network
     healthcheck:
