feat: add seeding data with migration mongo

--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -6,8 +6,16 @@ CONTAINER_PORT=YourContainerPortNumber
 FRONTEND_URL=YourFrontendURL
 
 # Mongo
+MONGO_URI=YourMongoURI
 MONGO_INITDB_ROOT_USERNAME=YourMongoInitDBRootUsername
 MONGO_INITDB_ROOT_PASSWORD=YourMongoInitDBRootPassword
 MONGO_INITDB_DATABASE=YourMongoInitDBDatabase
 MONGO_PORT=YourMongoPort
 MONGO_HOST=YourMongoHost
+
+# Argon2
+ARGON_TYPE=YourArgonType
+ARGON_TIME_COST=YourArgonTimeCost
+ARGON_MEMORY_COST=YourArgonMemoryCost
+ARGON_PARALLELISM=YourArgonParellelism
+ARGON_HASH_LENGTH=YourArgonHashLength
