--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,11 +18,13 @@
     "@types/express": "^5.0.5",
     "@types/joi": "^17.2.2",
     "@types/node": "^24.10.1",
+    "migrate-mongo": "^12.1.3",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "argon2": "^0.44.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
