--- a/back-end/package.json
+++ b/back-end/package.json
@@ -18,7 +18,6 @@
     "@types/express": "^5.0.5",
     "@types/joi": "^17.2.2",
     "@types/node": "^24.10.1",
-    "migrate-mongo": "^12.1.3",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
@@ -29,7 +28,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "joi": "^18.0.2",
+    "migrate-mongo": "^12.1.3",
     "mongoose": "^9.0.0",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
