feat: add authenticate and authorize with JWT token

--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -19,3 +19,10 @@ ARGON_TIME_COST=YourArgonTimeCost
 ARGON_MEMORY_COST=YourArgonMemoryCost
 ARGON_PARALLELISM=YourArgonParellelism
 ARGON_HASH_LENGTH=YourArgonHashLength
+
+# JWT
+JWT_SECRET=YourJwtSecret
+JWT_EXPIRES_IN=YourJwtExpiresIn
+JWT_ISSUER=YourJwtIssuer
+JWT_AUDIENCE=YourJwtAudience
+JWT_ALGORITHM=YourJwtAlgorithm
