--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -19,10 +19,11 @@
     "skipLibCheck": true,
 
     "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true
+    "noFallthroughCasesInSwitch": true,
+    "noUnusedLocals": true
+  },
+  "ts-node": {
+    "files": true
   }
 }
