--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/joi": "^17.2.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
@@ -28,6 +29,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "joi": "^18.0.2",
+    "jsonwebtoken": "^9.0.2",
     "migrate-mongo": "^12.1.3",
     "mongoose": "^9.0.0",
     "winston": "^3.18.3",
