--- a/back-end/package.json
+++ b/back-end/package.json
@@ -6,8 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js"
+    "build": "tsc && tsc-alias",
+    "start": "node dist/server.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -19,9 +23,18 @@
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-no-relative-import-paths": "^1.6.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
     "nodemon": "^3.1.11",
+    "prettier": "^3.7.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.48.0"
   },
   "dependencies": {
     "argon2": "^0.44.0",
@@ -31,6 +44,7 @@
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
     "migrate-mongo": "^12.1.3",
+    "module-alias": "^2.2.3",
     "mongoose": "^9.0.0",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0"
