--- a/back-end/docker-compose.yml
+++ b/back-end/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     env_file:
       - .env
     environment:
+      TZ: Asia/Ho_Chi_Minh
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
       MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
@@ -36,6 +37,7 @@ services:
     env_file:
       - .env
     environment:
+      - TZ=Asia/Ho_Chi_Minh
       - DOTENV_CONFIG_QUIET=true
     ports:
       - '${HOST_PORT}:${CONTAINER_PORT}'
