feat: add mail service

--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -26,3 +26,14 @@ JWT_EXPIRES_IN=YourJwtExpiresIn
 JWT_ISSUER=YourJwtIssuer
 JWT_AUDIENCE=YourJwtAudience
 JWT_ALGORITHM=YourJwtAlgorithm
+JWT_VERIFY_EMAIL_SECRET=YourJwtVerifyEmailSecret
+JWT_VERIFY_EMAIL_EXPIRES_IN=YourJwtVerifyEmailExpiresIn
+
+# Mail
+GOOGLE_MAIL_USER=YourGoogleMailUser
+GOOGLE_CLIENT_ID=YourGoogleClientID
+GOOGLE_CLIENT_SECRET=YourGoogleClientSecret
+GOOGLE_CLIENT_REFRESH_TOKEN=YourGoogleClientRefreshToken
+
+# Frontend URL
+FRONTEND_URL=YourFrontendURL
