--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.ts",
-    "build": "tsc && tsc-alias",
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json,html\" --exec \"ts-node src/server.ts\"",
+    "build": "tsc && tsc-alias && copyfiles -u 1 src/views/*.html src/templates/*.html dist/",
     "start": "node dist/server.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -23,6 +23,8 @@
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-no-relative-import-paths": "^1.6.1",
@@ -46,6 +48,7 @@
     "migrate-mongo": "^12.1.3",
     "module-alias": "^2.2.3",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.12",
     "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0"
   }
